refactor: CI 스크립트 작성 몇 각종 리팩터링 (#6)
* docs: README 수정

* chore: CI 스크립트 작성

* chore: CODEOWNERS 추가

* chore: 불필요한 파일 삭제

* style: 네이버 인텔리제이 코드 컨벤션 파일 적용

* docs: 네이버 인텔리제이 코드 컨벤션 파일 추가

* refactor: 중복된 BaseEntity 제거

* refactor: RsData 대신 ResponseEntity를 사용하도록

* refactor: Swagger 관련 로직 제거

* docs: PR 템플릿 수정

- 이슈 제대로 트래킹하도록

* chore: 개행 추가