@@ -1,8 +1,8 @@
 package com.ll.commars.global.security;
 
-import com.ll.commars.domain.user.user.service.UserService;
-import com.ll.commars.global.jwt.filter.JwtAuthenticationFilter;
-import com.ll.commars.global.jwt.component.JwtProvider;
+import java.util.Arrays;
+import java.util.List;
+
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -15,78 +15,84 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
-import java.util.Arrays;
-import java.util.List;
+import com.ll.commars.domain.user.user.service.UserService;
+import com.ll.commars.global.jwt.component.JwtProvider;
+import com.ll.commars.global.jwt.filter.JwtAuthenticationFilter;
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
-    private final JwtProvider jwtProvider;
-    private final UserService userService;
 
-    public SecurityConfig(JwtProvider jwtProvider, UserService userService) {
-        this.jwtProvider = jwtProvider;
-        this.userService = userService;
-    }
+	private final JwtProvider jwtProvider;
+	private final UserService userService;
 
-    @Bean
-    public JwtAuthenticationFilter jwtAuthenticationFilter() {
-        return new JwtAuthenticationFilter(jwtProvider, userService);
-    }
+	public SecurityConfig(JwtProvider jwtProvider, UserService userService) {
+		this.jwtProvider = jwtProvider;
+		this.userService = userService;
+	}
 
-    @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        http
-                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // ✅ CORS 설정 추가
-                .csrf(AbstractHttpConfigurer::disable) // CSRF 비활성화 (API 요청을 위해 필요)
-                .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/**", "/api/public/**", "/api/auth/google", "/api/auth/**").permitAll() // Google 로그인 API 허용
-                        .requestMatchers("/login-success").permitAll()
-                        .anyRequest().authenticated()
-                        )
-                .oauth2Login(oauth2 -> oauth2
-                        .defaultSuccessUrl("/login-success", true)
-                )
-                .addFilterBefore(jwtAuthenticationFilter(), UsernamePasswordAuthenticationFilter.class);
+	@Bean
+	public JwtAuthenticationFilter jwtAuthenticationFilter() {
+		return new JwtAuthenticationFilter(jwtProvider, userService);
+	}
 
-        return http.build();
-    }
+	@Bean
+	public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+		http
+			.cors(cors -> cors.configurationSource(corsConfigurationSource())) // ✅ CORS 설정 추가
+			.csrf(AbstractHttpConfigurer::disable) // CSRF 비활성화 (API 요청을 위해 필요)
+			.authorizeHttpRequests(auth -> auth
+				.requestMatchers("/**", "/api/public/**", "/api/auth/google", "/api/auth/**")
+				.permitAll() // Google 로그인 API 허용
+				.requestMatchers("/login-success")
+				.permitAll()
+				.anyRequest()
+				.authenticated()
+			)
+			.oauth2Login(oauth2 -> oauth2
+				.defaultSuccessUrl("/login-success", true)
+			)
+			.addFilterBefore(jwtAuthenticationFilter(), UsernamePasswordAuthenticationFilter.class);
 
-    // ✅ CORS 설정 추가
-    @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
+		return http.build();
+	}
 
-        configuration.setAllowedOrigins(Arrays.asList(
-                "http://localhost:5173",
-                "http://localhost:5174",
-                "http://localhost:5175",
-                "https://accounts.google.com",
-                "https://nid.naver.com",
-                "https://commars.whqtker.site"
-        ));
+	// ✅ CORS 설정 추가
+	@Bean
+	public CorsConfigurationSource corsConfigurationSource() {
+		CorsConfiguration configuration = new CorsConfiguration();
 
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
-        configuration.setExposedHeaders(List.of("Authorization", "Content-Type", "refreshToken", "accessToken"));
-        configuration.setAllowCredentials(true); // 인증정보 포함 허용
+		configuration.setAllowedOrigins(Arrays.asList(
+			"http://localhost:5173",
+			"http://localhost:5174",
+			"http://localhost:5175",
+			"https://accounts.google.com",
+			"https://nid.naver.com",
+			"https://commars.whqtker.site"
+		));
 
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
-        return source;
-    }
+		configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+		configuration.setAllowedHeaders(List.of("*"));
+		configuration.setExposedHeaders(List.of("Authorization", "Content-Type", "refreshToken", "accessToken"));
+		configuration.setAllowCredentials(true); // 인증정보 포함 허용
 
-    @Bean
-    public WebMvcConfigurer webMvcConfigurer() {
-        return new WebMvcConfigurer() {
-            @Override
-            public void addCorsMappings(org.springframework.web.servlet.config.annotation.CorsRegistry registry) {
-                registry.addMapping("/**")
-                        .allowedOrigins("http://localhost:5173", "http://localhost:5174", "http://localhost:5175", "https://accounts.google.com", "https://nid.naver.com")
-                        .allowedMethods("GET", "POST", "PUT", "DELETE", "OPTIONS")
-                        .allowedHeaders("*")
-                        .allowCredentials(true);
-            }
-        };
-    }
+		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+		source.registerCorsConfiguration("/**", configuration);
+		return source;
+	}
+
+	@Bean
+	public WebMvcConfigurer webMvcConfigurer() {
+		return new WebMvcConfigurer() {
+			@Override
+			public void addCorsMappings(org.springframework.web.servlet.config.annotation.CorsRegistry registry) {
+				registry.addMapping("/**")
+					.allowedOrigins("http://localhost:5173", "http://localhost:5174", "http://localhost:5175",
+						"https://accounts.google.com", "https://nid.naver.com")
+					.allowedMethods("GET", "POST", "PUT", "DELETE", "OPTIONS")
+					.allowedHeaders("*")
+					.allowCredentials(true);
+			}
+		};
+	}
 }
